# magnetron

./: .gitignore  CMakeLists.txt  README.md  dev-perf-asm-cpp-bench.sh  dev-release-retry.sh  dev-release.sh  dev-setup.sh  dev-test-all.sh  pyproject.toml
.github/workflows/: build-publish-wheels.yaml  cmake-python-multi-platform.yml
benchmark/: CMakeLists.txt  benchmarks.cpp
benchmark/python/: add_mag.py  add_mag_noncont.py  add_torch.py  bench.py  bench_all.py  bench_square_matmul.py  bench_tool.py  bench_various_matmul.py  gemm_mag.py  gemm_torch.py  gemv_mag.py  (+2 more)
cmake/: arch.cmake  blas_tune.cmake  comflags.cmake  compiler_config.cmake  lib.cmake  target_config.cmake
docs/: 3. DataTypes.md  4. Operator Cheatsheet.md  5. Environment Variables.md  Magnetron-Cheatsheet.md  architecture.drawio  mag-file-format.md
examples/: README.md  autoencoder.py  linear_regression.py  xor.py  xor_tiny.py  xor_torch_api.py
fuzzer/: CMakeLists.txt  dict.txt  fuzzer.cpp
magnetron/: CMakeLists.txt  mag_autodiff.c  mag_aux.c  mag_backend.c  mag_backend.h  mag_context.c  mag_context.h  mag_cpuid.c  mag_def.c  mag_def.h  mag_filestorage.c  mag_gradients.c  mag_gradients.h  mag_hashset.c  mag_hashset.h  mag_image.c  mag_machine.c  mag_machine.h  mag_operator.c  mag_operator.h  mag_operators.c  mag_opparam.h  mag_ops.c  mag_pool.c  mag_shape.c  mag_shape.h  mag_sstream.c  mag_sstream.h  mag_tensor.c  mag_tensor.h  mag_thread.h  mag_toposort.c  mag_toposort.h  mag_visualize.c  magnetron.c  magnetron.h  magnetron_aux.c  magnetron_cpu.c  magnetron_cpu.cpp  magnetron_cpu.h  (+13 more)
magnetron/binding_layer/: CMakeLists.txt  mag_binding_layer.cpp
magnetron/bindings/: CMakeLists.txt  _module.cpp  context.cpp  dtype.cpp  mag_bindings.cpp  prelude.cpp  prelude.hpp  snapshot.cpp  tensor.cpp  tensor_class.cpp  tensor_factories.cpp  tensor_operators.cpp  tensor_special.cpp
magnetron/core/: CMakeLists.txt  mag_alloc.c  mag_alloc.h  mag_autodiff.c  mag_autodiff.h  mag_backend.c  mag_backend.h  mag_bfloat16.h  mag_context.c  mag_context.h  mag_coords.c  mag_coords.h  mag_coords_iter.h  mag_cpuid.c  mag_cpuid.h  mag_def.c  mag_def.h  mag_dtype.c  mag_dylib.c  mag_dylib.h  mag_fastdivmod.c  mag_fastdivmod.h  mag_filestorage.c  mag_float16.h  mag_fmt.c  mag_fmt.h  mag_gradients.c  mag_gradients.h  mag_hash.c  mag_hash.h  mag_hashset.c  mag_hashset.h  mag_image.c  mag_machine.c  mag_machine.h  mag_mmap.c  mag_mmap.h  mag_op_attr.h  mag_op_stubs.c  mag_operator.c  (+29 more)
magnetron/cpu/: CMakeLists.txt  mag_cpu.c  mag_cpu.h  mag_cpu_autotune.c  mag_cpu_autotune.h  mag_cpu_detect_optimal.c  mag_cpu_fallback.c  mag_cpu_impl.inl  mag_cpu_impl_approxfn.inl  mag_cpu_impl_cast.inl  mag_cpu_impl_crc32c.inl  mag_cpu_impl_ops_binary.inl  mag_cpu_impl_ops_fill.inl  mag_cpu_impl_ops_matmul.inl  mag_cpu_impl_ops_multinomial.inl  mag_cpu_impl_ops_other.inl  mag_cpu_impl_ops_prim.inl  mag_cpu_impl_ops_reduce.inl  mag_cpu_impl_ops_unary.inl  mag_cpu_impl_rand.inl  mag_cpu_impl_veclib.inl  mag_cpu_kernel_data.h  mag_cpu_phase_fence.c  mag_cpu_phase_fence.h  mag_cpu_prng_philox.h  mag_cpu_threadpool.c  mag_cpu_threadpool.h  mag_numa.c  mag_numa.h  mag_simd.h  mag_tls_arena.c  mag_tls_arena.h  mat_cpu_ops_matmul_kernels.inl
magnetron/cpu/amd64/: amd64.cmake  mag_cpu_amd64_alderlake.c  mag_cpu_amd64_arrowlake.c  mag_cpu_amd64_cannonlake.c  mag_cpu_amd64_cascadelake.c  mag_cpu_amd64_cooperlake.c  mag_cpu_amd64_core2.c  mag_cpu_amd64_diamondrapids.c  mag_cpu_amd64_haswell.c  mag_cpu_amd64_icelake.c  mag_cpu_amd64_ivybridge.c  mag_cpu_amd64_nehalem.c  mag_cpu_amd64_sandybridge.c  mag_cpu_amd64_sapphirerapids.c  mag_cpu_amd64_sierraforest.c  mag_cpu_amd64_skylake_avx512.c  mag_cpu_amd64_tigerlake.c  mag_cpu_amd64_westmere.c  mag_cpu_amd64_zn1.c  mag_cpu_amd64_zn2.c  mag_cpu_amd64_zn3.c  mag_cpu_amd64_zn4.c  mag_cpu_amd64_zn5.c
magnetron/cpu/arm64/: arm64.cmake  mag_cpu_arm64_v82.c  mag_cpu_arm64_v82_sve.c  mag_cpu_arm64_v86.c  mag_cpu_arm64_v86_crypto.c  mag_cpu_arm64_v9_sve2.c
magnetron/cpu/cmake/: backend_specialization.cmake  backend_summary.cmake
magnetron/cuda/: CMakeLists.txt  mag_cuda.cu  mag_cuda.cuh  mag_cuda_binary.cu  mag_cuda_binary.cuh  mag_cuda_coords.cuh  mag_cuda_fill.cu  mag_cuda_fill.cuh  mag_cuda_matmul.cu  mag_cuda_matmul.cuh  mag_cuda_misc.cu  mag_cuda_misc.cuh  mag_cuda_reduction.cu  mag_cuda_reduction.cuh  mag_cuda_unary.cu  mag_cuda_unary.cuh  mag_matmul.cu
magnetron/magnetron_cpu/: CMakeLists.txt  magnetron_cpu.c  magnetron_cpu.h  magnetron_cpu_fallback.c  magnetron_cpu_impl.inl
magnetron/magnetron_cpu/amd64/: amd64.cmake  magnetron_cpu_amd64_alderlake.c  magnetron_cpu_amd64_arrowlake.c  magnetron_cpu_amd64_cannonlake.c  magnetron_cpu_amd64_cascadelake.c  magnetron_cpu_amd64_cooperlake.c  magnetron_cpu_amd64_core2.c  magnetron_cpu_amd64_diamondrapids.c  magnetron_cpu_amd64_haswell.c  magnetron_cpu_amd64_icelake.c  magnetron_cpu_amd64_ivybridge.c  magnetron_cpu_amd64_nehalem.c  magnetron_cpu_amd64_sandybridge.c  magnetron_cpu_amd64_sapphirerapids.c  magnetron_cpu_amd64_sierraforest.c  magnetron_cpu_amd64_skylake_avx512.c  magnetron_cpu_amd64_tigerlake.c  magnetron_cpu_amd64_zn1.c  magnetron_cpu_amd64_zn2.c  magnetron_cpu_amd64_zn3.c  magnetron_cpu_amd64_zn4.c  magnetron_cpu_amd64_zn5.c
magnetron/magnetron_cpu/arm64/: arm64.cmake  magnetron_cpu_arm64_v82.c
magnetron/magnetron_cuda/: CMakeLists.txt  mag_cuda.cu  mag_cuda.cuh
media/: logo-ascii.txt
python/: bing_gen.py
scripts/: benchmark-nsight-matmul.sh  instrument.sh  pytest-all-parallel.sh
test/: CMakeLists.txt
test/cpp/: CMakeLists.txt  magnetron.hpp  nn.hpp  prelude.cpp  prelude.hpp
test/cpp/core/: context.cpp  crc32c.cpp  hash.cpp  map.cpp  misc.cpp  opp.cpp  prng.cpp
test/cpp/models/: xor.cpp
test/cpp/operators/: binary.cpp  binary_operators.cpp  fill.cpp  matmul.cpp  unary.cpp
test/cpp/snapshot/: snapshot.cpp
test/cpp/storage/: storage.cpp
test/cpp/tensor/: autograd.cpp  binary_operators.cpp  core_logic.cpp  indexing.cpp  init_operators.cpp  load_image.cpp  matmul.cpp  transform_operators.cpp  unary_operators.cpp  views.cpp
(+87 files in other folders)
